--- a/1 - Simplify Repetitive Tasks with Loops/2 - The while Loop/start/index.html
+++ b/1 - Simplify Repetitive Tasks with Loops/2 - The while Loop/start/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <main></main>
-    <script src="js/while.js"></script>
+    <script src="js/break.js"></script>
   </body>
 </html>
